Bug 1644374 - Remember NS_BASE_STREAM_WOULD_BLOCK error in Http3Stream::OnReadSegment() r=necko-reviewers,dragana

Errors are lost between Http3Stream::OnReadSegment() and Http3Stream::ReadSegments() in nsBufferedInputStream::ReadSegments(). In case of NS_BASE_STREAM_WOULD_BLOCK this means we proceed to the next state without sending all request data.

Differential Revision: https://phabricator.services.mozilla.com/D79262